RESOLVED FIXED178868
WebDriver: unknown capabilities should produce an InvalidArgument error when validating capabilities
https://bugs.webkit.org/show_bug.cgi?id=178868
Summary WebDriver: unknown capabilities should produce an InvalidArgument error when ...
Attachments
Patch (1.48 KB, patch)
2017-10-26 07:18 PDT, Carlos Garcia Campos
bburg: review+
Carlos Garcia Campos
Comment 1 2017-10-26 07:18:44 PDT
Blaze Burg
Comment 2 2017-10-26 10:17:18 PDT
Comment on attachment 325009 [details] Patch rs=me
Carlos Garcia Campos
Comment 3 2017-10-27 00:13:19 PDT
Radar WebKit Bug Importer
Comment 4 2017-11-15 13:01:13 PST
Note You need to log in before you can comment on or make changes to this bug.