WebDriver: unknown capabilities should produce an InvalidArgument error when validating capabilities https://bugs.webkit.org/show_bug.cgi?id=178868

Reviewed by Brian Burg.

7.2 Processing Capabilities
https://w3c.github.io/webdriver/webdriver-spec.html#dfn-validate-capabilities

Fixes: imported/w3c/webdriver/tests/sessions/new_session/invalid_capabilities.py::test_invalid_extensions

* WebDriverService.cpp:
(WebDriver::WebDriverService::validatedCapabilities const):

Canonical link: https://commits.webkit.org/195078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224090 268f45cc-cd09-0410-ab3c-d52691b4dbfc